# DoList

./: README.md  appSpecs.md  database.dbml  decisionHistory.md
.github/: react-lint.yml
.github/workflows/: react-lint.yml
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.scss  App.tsx  index.scss  main.tsx  types.tsx
client/src/components/: Footer.scss  Footer.tsx  Header.scss  Header.tsx  LoginContainer.tsx  PageNotFound.scss  PageNotFound.tsx
client/src/containers/: HomePage.scss  HomePage.tsx  LandingPage.scss  LandingPage.tsx  LoginPage.scss  LoginPage.tsx  SignupPage.scss  SignupPage.tsx
client/src/context/: AppContext.tsx
client/src/hooks/: auth.tsx  useAppContext.tsx
client/src/lib/: Config.tsx  Constants.tsx  Utils.tsx
server/: README.md  alembic.ini  main.py  pyproject.toml
server/app/api/v1/: __init__.py  tasks.py  users.py
server/app/config/: settings.py
server/app/db/sql/: base.py  config.py  data.py  models.py
server/app/misc/: auth.py  constants.py  exceptions.py  logger.py  settings.py
server/app/schemas/: tasks.py  users.py
server/app/services/: auth.py  tasks.py  users.py
server/migrations/: env.py
server/migrations/versions/: 2023_11_04_2103-97b681fe541a_base_migration.py  2023_11_16_1920-0b4539170568_added_user_token_table.py  2023_11_19_2312-734d6ae7b6a6_upgrading_password_field_char_limit_to_.py  2023_11_19_2359-409927450130_upgrading_tokenlength.py  2023_11_20_1737-010d44f94874_base_migrations.py  2023_12_25_2331-3f094bb57e67_increase_task_title_description_fields_.py
server/scripts/: lint.sh
